--- a/config/i3/config
+++ b/config/i3/config
@@ -50,7 +50,8 @@ floating_modifier $mod
 tiling_drag modifier titlebar
 
 # start a terminal
-bindsym $mod+Return exec i3-sensible-terminal
+# bindsym $mod+Return exec i3-sensible-terminal
+bindsym $mod+Return exec --no-startup-id alacritty
 
 # kill focused window
 bindsym $mod+Shift+q kill
@@ -160,7 +161,7 @@ bindsym $mod+Shift+0 move container to workspace number $ws10
 # exec_always --no-startup-id firefox
 # exec_always
 exec --no-startup-id i3-msg 'workspace 3; exec /usr/bin/firefox;'
-exec --no-startup-id i3-msg 'workspace 1; exec i3-sensible-terminal; workspace 1'
+exec --no-startup-id i3-msg 'workspace 1; exec alacritty; workspace 1'
 # exec --no-startup-id i3-msg 'workspace 4:ws4; exec /usr/bin/firefox'
 
 # reload the configuration file
@@ -232,3 +233,5 @@ mode "$mode_system" {
 
 bindsym $mod+BackSpace mode "$mode_system"
 
+# Miscellanea
+exec --no-startup-id synclient VertScrollDelta=-41
