--- a/config/i3/config
+++ b/config/i3/config
@@ -53,6 +53,11 @@ tiling_drag modifier titlebar
 # bindsym $mod+Return exec i3-sensible-terminal
 bindsym $mod+Return exec --no-startup-id alacritty
 
+# BUG: NOTWORKING
+# BUG: I intend to use this command to open the terminal in the same working directory 
+set $A sh ~/.config/i3/script/newWindowInSameWD.sh
+bindsym $mod+Shift+Return exec $A
+
 # kill focused window
 bindsym $mod+Shift+q kill
 
@@ -206,7 +211,6 @@ bar {
 
 set $i3lockwall sh ~/.config/i3/script/lock.sh
 bindsym $mod+Ctrl+Shift+l exec --no-startup-id $i3lockwall
-exec xautolock -time 15 -locker '~/.config/i3/script/lock.sh' &
 
 set $nextworkspace sh ~/.config/i3/script/next.sh
 bindsym $mod+Ctrl+Right exec --no-startup-id $nextworkspace
@@ -234,4 +238,4 @@ mode "$mode_system" {
 bindsym $mod+BackSpace mode "$mode_system"
 
 # Miscellanea
-exec --no-startup-id synclient VertScrollDelta=-41
+exec --no-startup-id sh $HOME/.config/i3/script/inverseScroll.sh
