--- a/config/i3/config
+++ b/config/i3/config
@@ -29,7 +29,14 @@ exec --no-startup-id dex --autostart --environment i3
 
 # xss-lock grabs a logind suspend inhibit lock and will use i3lock to lock the
 # screen before suspend. Use loginctl lock-session to lock your screen.
-exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
+
+# set auto lock time in seconds
+exec --no-startup-id xset s 300 
+
+# exec --no-startup-id xss-lock -l -- i3lock --nofork
+# NOTE: i3CustomLock is a customized command i wrote and put into PATH. Replace it with i3lock
+# 
+exec --no-startup-id xss-lock -l -- i3CustomLock --nofork
 
 # NetworkManager is the most popular way to manage wireless networks on Linux,
 # and nm-applet is a desktop environment-independent system tray GUI for it.
@@ -161,10 +168,10 @@ bindsym $mod+Shift+0 move container to workspace number $ws10
 
 # assign [class="firefox" instance="Navigator"] $ws2
 
+
 # for_window [class="firefox"] move container to workspace 2
-# exec_always --no-startup-id firefox
-# exec_always
 exec --no-startup-id i3-msg 'workspace 3; exec /usr/bin/firefox;'
+
 exec --no-startup-id i3-msg 'workspace 1; exec alacritty; workspace 1'
 # exec --no-startup-id i3-msg 'workspace 4:ws4; exec /usr/bin/firefox'
 
@@ -211,11 +218,18 @@ bar {
 set $i3lockwall sh ~/.config/i3/script/lock.sh
 bindsym $mod+Ctrl+Shift+l exec --no-startup-id $i3lockwall
 
-set $nextworkspace sh ~/.config/i3/script/next.sh
-bindsym $mod+Ctrl+Right exec --no-startup-id $nextworkspace
+# set $nextworkspace sh ~/.config/i3/script/next.sh
+# bindsym $mod+Ctrl+Right exec --no-startup-id $nextworkspace
 
-set $preworkspace sh ~/.config/i3/script/pre.sh
-bindsym $mod+Ctrl+Left exec --no-startup-id $preworkspace
+bindsym $mod+Ctrl+Right exec --no-startup-id sh ~/.config/i3/script/next.sh
+
+# set $preworkspace sh ~/.config/i3/script/pre.sh
+# bindsym $mod+Ctrl+Left exec --no-startup-id $preworkspace
+
+bindsym $mod+Ctrl+Left exec --no-startup-id sh ~/.config/i3/script/pre.sh
+
+bindsym $mod+Ctrl+Shift+Right exec --no-startup-id sh ~/.config/i3/script/moveContainerAndScreenNext.sh
+bindsym $mod+Ctrl+Shift+Left exec --no-startup-id sh ~/.config/i3/script/moveContainerAndScreenPre.sh
 
 # shutdown / restart / suspend...
 set $mode_system System (l) lock, (e) logout, (s) suspend, (h) hibernate, (r) reboot, (CTRL+s) shutdown
