--- a/config/i3/config
+++ b/config/i3/config
@@ -57,7 +57,8 @@ floating_modifier $mod
 tiling_drag modifier titlebar
 
 # start a terminal
-# bindsym $mod+Return exec i3-sensible-terminal
+# NOTE: requires alacritty to be installed
+# `alacritty` may be changed to `i3-sensible-terminal`
 bindsym $mod+Return exec --no-startup-id alacritty
 
 # The open terminal in the current working directory, the keybinding shall be defined
