--- a/config/i3/config
+++ b/config/i3/config
@@ -52,6 +52,11 @@ bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOU
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
 
+# border customiasation
+default_border pixel 2
+hide_edge_borders vertical
+smart_borders on
+
 # move tiling windows via drag & drop by left-clicking into the title bar,
 # or left-clicking anywhere into the window while holding the floating modifier.
 tiling_drag modifier titlebar
