--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -5,4 +5,6 @@ bold_italic_font Operator Mono Medium Italic
 
 font_size 16.0
 
+shell zsh
+
 map ctrl+shift+enter launch --cwd=current --type=os-window
