--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -1,10 +1,1 @@
-ifont_family      Operator Mono Book
-bold_font        Operator Mono Medium
-italic_font      Operator Mono Book Italic
-bold_italic_font Operator Mono Medium Italic
-
-font_size 16.0
-
-shell zsh
-
-map ctrl+shift+enter launch --cwd=current --type=os-window
+/home/hhyh/.config/HyprV/kitty/kitty.conf
