--- a/config/i3/config
+++ b/config/i3/config
@@ -31,6 +31,8 @@ font pango:monospace 11
 # Start XDG autostart .desktop files using dex. See also
 # https://wiki.archlinux.org/index.php/XDG_Autostart
 exec --no-startup-id dex --autostart --environment i3
+exec --no-startup-id xsetroot -solid "#000000"
+
 
 # The combination of xss-lock, nm-applet and pactl is a popular choice, so
 # they are included here as an example. Modify as you see fit.
