--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -1,1 +1,15 @@
-/home/hhyh/.config/HyprV/kitty/kitty.conf
+include ./mocha.conf
+font_family      jetbrains mono nerd font
+font_size        16
+bold_font        auto
+italic_font      auto
+bold_italic_font auto
+mouse_hide_wait  2.0
+cursor_shape     block
+url_color        #0087bd
+url_style        dotted
+#Close the terminal without confirmation
+confirm_os_window_close 0
+background_opacity 1
+
+map ctrl+shift+enter launch --cwd=current --type=os-window
