--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -22,20 +22,24 @@ exec-once = mako
 exec-once = blueman-applet
 exec-once = nm-applet --indicator
 exec-once = wl-paste --watch cliphist store
+#lock screen
+# exec-once = swayidle -w timeout 600 swaylock
 exec = ~/.config/HyprV/hyprv_util setbg
+# exec-once fcitx5
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
-    kb_layout = gb
+    kb_layout = gb, cn
     kb_variant =
     kb_model =
-    kb_options =
+    kb_options = grp:win_space_toggle
     kb_rules =
 
     follow_mouse = 1
 
     touchpad {
         natural_scroll = yes
+	scroll_factor = 0.8
     }
 
     sensitivity = 0.2 # -1.0 - 1.0, 0 means no modification.
@@ -95,11 +99,13 @@ dwindle {
     # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
     pseudotile = yes # master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
     preserve_split = yes # you probably want this
+    special_scale_factor=0.95
 }
 
 master {
     # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
     new_is_master = true
+    orientation = "right"
 }
 
 gestures {
@@ -109,9 +115,9 @@ gestures {
 
 # Example per-device config
 # See https://wiki.hyprland.org/Configuring/Keywords/#executing for more
-device:epic mouse V1 {
-    sensitivity = -0.5
-}
+#device:epic mouse V1 {
+#    sensitivity = -1
+#}
 
 # Example windowrule v1
 #windowrule = float, ^(kitty)$
@@ -127,11 +133,11 @@ windowrule = float, title:^(update-sys)$
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 # rules below would make the specific app transparent
-windowrulev2 = opacity 0.8 0.8,class:^(kitty)$
+windowrulev2 = opacity 0.95 0.95,class:^(kitty)$
 windowrulev2 = animation popin,class:^(kitty)$,title:^(update-sys)$
 windowrulev2 = animation popin,class:^(thunar)$
 windowrulev2 = opacity 0.8 0.8,class:^(thunar)$
-windowrulev2 = opacity 0.8 0.8,class:^(VSCodium)$
+windowrulev2 = opacity 0.9 0.9,class:^(VSCodium)$
 windowrulev2 = animation popin,class:^(chromium)$
 windowrulev2 = move cursor -3% -105%,class:^(wofi)$
 windowrulev2 = noanim,class:^(wofi)$
@@ -155,12 +161,48 @@ bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, S, exec, grim -g "$(slurp)" - | swappy -f - # take a screenshot
 bind = ALT, V, exec, cliphist list | wofi -dmenu | cliphist decode | wl-copy # open clipboard manager
 bind = $mainMod, T, exec, ~/.config/HyprV/hyprv_util vswitch # switch HyprV version
+bind=SUPER,F,fullscreen
+
+
+# Exit hyprland
+bind=$mainMod SHIFT,e,submap,resize
+# will start a submap called "resize"
+submap=resize
+# sets repeatable binds for resizing the active window
+binde=,y,exec, hyprctl dispatch exit
+# use reset to go back to the global submap
+bind=,escape,submap,reset 
+submap=reset
+
+# Resize
+bind=$mainMod SHIFT,r,submap,resize
+# will start a submap called "resize"
+submap=resize
+# sets repeatable binds for resizing the active window
+binde=,right,resizeactive,10 0
+binde=,left,resizeactive,-10 0
+binde=,up,resizeactive,0 -10
+binde=,down,resizeactive,0 10
+# use reset to go back to the global submap
+bind=,escape,submap,reset 
+# will reset the submap, meaning end the current one and return to the global one
+submap=reset
+# keybinds further down will be global again...
+
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
 bind = $mainMod, right, movefocus, r
 bind = $mainMod, up, movefocus, u
 bind = $mainMod, down, movefocus, d
+
+bind = SUPER SHIFT, left, movewindow, l
+bind = SUPER SHIFT, right, movewindow, r
+bind = SUPER SHIFT, up, movewindow, u
+bind = SUPER SHIFT, down, movewindow, d
+
+bind=$mainMod SHIFT,MINUS,movetoworkspace,special
+bind=$mainMod,MINUS,togglespecialworkspace,
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
