--- a/config/i3/config
+++ b/config/i3/config
@@ -15,8 +15,9 @@ set $mod Mod4
 # Mod4 is windows key, Mod1 is alt key.
 
 # Font for window titles. Will also be used by the bar unless a different font
-# is used in the bar {} block below.
+# is used in the bar {} bloc12
 font pango:monospace 11
+# font pango:DejaVu Sans Mono 16
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
