--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -23,9 +23,13 @@ exec-once = blueman-applet
 exec-once = nm-applet --indicator
 exec-once = wl-paste --watch cliphist store
 #lock screen
-# exec-once = swayidle -w timeout 600 swaylock
+exec-once = swayidle -w timeout 600 hyprlock
 exec = ~/.config/HyprV/hyprv_util setbg
 # exec-once fcitx5
+exec-once=fcitx5-remote -r
+exec-once=fcitx5 -d --replace
+
+
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
@@ -42,7 +46,7 @@ input {
 	scroll_factor = 0.8
     }
 
-    sensitivity = 0.2 # -1.0 - 1.0, 0 means no modification.
+    sensitivity = 0.5 # -1.0 - 1.0, 0 means no modification.
 }
 
 general {
@@ -104,7 +108,7 @@ dwindle {
 
 master {
     # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
-    new_is_master = true
+    # new_is_master = true
     orientation = "right"
 }
 
