--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -162,11 +162,14 @@ bind = $mainMod, V, togglefloating, # Allow a window to float
 bind = $mainMod, d, exec, wofi # Show the graphical app launcher
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
-bind = $mainMod, S, exec, grim -g "$(slurp)" - | swappy -f - # take a screenshot
+#bind = $mainMod, S, exec, grim -g "$(slurp)" - | swappy -f - # take a screenshot
 bind = ALT, V, exec, cliphist list | wofi -dmenu | cliphist decode | wl-copy # open clipboard manager
 bind = $mainMod, T, exec, ~/.config/HyprV/hyprv_util vswitch # switch HyprV version
 bind=SUPER,F,fullscreen
 
+# Screenshot
+bind =, Print, exec, grim -g "$(slurp)" - | wl-copy && wl-paste > ~/Pictures/Screenshot-cropped-$(date +%F_%T).png | notify-send "Cropped Screenshot saved to ~/Pictures" -t 1000 # screenshot of a region
+bind = $mainMod, Print, exec, grim - | wl-copy && wl-paste > ~/Pictures/Screenshot-$(date +%F_%T).png | notify-send "Screenshot saved to ~/Pictures" -t 1000
 
 # Exit hyprland
 bind=$mainMod SHIFT,e,submap,resize
