--- a/config/sway/config
+++ b/config/sway/config
@@ -1,16 +1,3 @@
-# dependencies of i3:
-#  - i3lock 
-#  - i3status 
-#  - dmenu 
-# In arch, to run i3 with xorg, it requires:
-#  - xorg-server
-#  - xorg-xinit
-#  - xorg-xrandr
-
-# i3 config file (v4)
-#
-# Please see https://i3wm.org/docs/userguide.html for a complete reference!
-
 set $mod Mod4
 # Mod4 is windows key, Mod1 is alt key.
 
@@ -23,38 +10,14 @@ font pango:monospace 11
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
 #font pango:DejaVu Sans Mono 8
 
-# Start XDG autostart .desktop files using dex. See also
-# https://wiki.archlinux.org/index.php/XDG_Autostart
-# Miscellanea startup config
-exec --no-startup-id dex --autostart --environment i3
-exec --no-startup-id xsetroot -solid "#000000"
-exec --no-startup-id gsettings set org.gnome.desktop.interface gtk-theme "Adwaita-dark"
-exec --no-startup-id sh $HOME/.config/i3/script/inverseScroll.sh
-# british keyboard
-exec --no-startup-id setxkbmap -layout gb
-exec --no-startup-id xset m 22/10 0 
-
-# The combination of xss-lock, nm-applet and pactl is a popular choice, so
-# they are included here as an example. Modify as you see fit.
-
-# xss-lock grabs a logind suspend inhibit lock and will use i3lock to lock the
-# screen before suspend. Use loginctl lock-session to lock your screen.
-
-# set auto lock time in seconds
-exec --no-startup-id xset s 600
-
-# exec --no-startup-id xss-lock -l -- i3lock --nofork
-
-# NetworkManager is the most popular way to manage wireless networks on Linux,
-# and nm-applet is a desktop environment-independent system tray GUI for it.
-exec --no-startup-id nm-applet
+exec nm-applet
 
 # Use pactl to adjust volume in PulseAudio.
 set $refresh_i3status killall -SIGUSR1 i3status
-bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +10% && $refresh_i3status
-bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -10% && $refresh_i3status
-bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
-bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
+bindsym XF86AudioRaiseVolume exec pactl set-sink-volume @DEFAULT_SINK@ +10% && $refresh_i3status
+bindsym XF86AudioLowerVolume exec pactl set-sink-volume @DEFAULT_SINK@ -10% && $refresh_i3status
+bindsym XF86AudioMute exec pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
+bindsym XF86AudioMicMute exec pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
@@ -63,14 +26,10 @@ default_border pixel 2
 hide_edge_borders vertical
 smart_borders on
 
-# move tiling windows via drag & drop by left-clicking into the title bar,
-# or left-clicking anywhere into the window while holding the floating modifier.
-tiling_drag modifier titlebar
-
 # start a terminal
 # NOTE: requires alacritty to be installed
 # `alacritty` may be changed to `i3-sensible-terminal`
-bindsym $mod+Return exec --no-startup-id kitty
+bindsym $mod+Return exec kitty
 
 # The open terminal in the current working directory, the keybinding shall be defined
 # thourgh the terminal emulator.
@@ -80,12 +39,12 @@ bindsym $mod+Return exec --no-startup-id kitty
 bindsym $mod+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec --no-startup-id dmenu_run
+bindsym $mod+d exec wofi
 # A more modern dmenu replacement is rofi:
 # bindcode $mod+40 exec "rofi -modi drun,run -show drun"
 # There also is i3-dmenu-desktop which only displays applications shipping a
 # .desktop file. It is a wrapper around dmenu, so you need that installed.
-# bindcode $mod+40 exec --no-startup-id i3-dmenu-desktop
+# bindcode $mod+40 exec i3-dmenu-desktop
 
 bindsym $mod+v split v
 bindsym $mod+h split h
@@ -182,17 +141,17 @@ bindsym $mod+Shift+0 move container to workspace number $ws10
 
 
 # for_window [class="firefox"] move container to workspace 2
-exec --no-startup-id i3-msg 'workspace 3; exec /usr/bin/firefox;'
+exec i3-msg 'workspace 3; exec /usr/bin/firefox;'
 
-exec --no-startup-id i3-msg 'workspace 2; exec kitty; workspace 2'
-# exec --no-startup-id i3-msg 'workspace 4:ws4; exec /usr/bin/firefox'
+exec i3-msg 'workspace 2; exec kitty; workspace 2'
+# exec i3-msg 'workspace 4:ws4; exec /usr/bin/firefox'
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
 bindsym $mod+Shift+r restart
 # exit i3 (logs you out of your X session)
-bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
+bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit sway? This will end your session.' -B 'Yes, exit' 'sway exit'"
 
 # resize window (you can also use the mouse for that)
 mode "resize" {
@@ -221,53 +180,32 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
-# Start i3bar to display a workspace bar (plus the system information i3status
-# finds out, if available)
-bar {
-	position bottom
-	mode hide
-	hidden_state hide
-        status_command i3status --config ~/.config/i3/i3status.conf
-	font pango:DejaVu Sans Mono 11
-	padding 2px 10px 2px 10px
-	strip_workspace_numbers yes 
-	strip_workspace_name yes 
-}
-
 # Make the currently focused window a scratchpad
 bindsym $mod+Shift+minus move scratchpad
 
 # Show the first scratchpad window
 bindsym $mod+minus scratchpad show
 
-set $i3lockwall sh ~/.config/i3/script/lock.sh
-bindsym $mod+Ctrl+Shift+l exec --no-startup-id $i3lockwall
-exec --no-startup-id xss-lock -l -- ~/.config/i3/script/lock.sh --nofork
-
 # set $nextworkspace sh ~/.config/i3/script/next.sh
-# bindsym $mod+Ctrl+Right exec --no-startup-id $nextworkspace
+# bindsym $mod+Ctrl+Right exec $nextworkspace
 
-bindsym $mod+Ctrl+Right exec --no-startup-id sh ~/.config/i3/script/next.sh
+bindsym $mod+Ctrl+Right exec swaymsg workspace next
+bindsym $mod+Ctrl+Left exec swaymsg workspace prev
 
-# set $preworkspace sh ~/.config/i3/script/pre.sh
-# bindsym $mod+Ctrl+Left exec --no-startup-id $preworkspace
 
-bindsym $mod+Ctrl+Left exec --no-startup-id sh ~/.config/i3/script/pre.sh
-
-bindsym $mod+Ctrl+Shift+Right exec --no-startup-id sh ~/.config/i3/script/moveContainerAndScreenNext.sh
-bindsym $mod+Ctrl+Shift+Left exec --no-startup-id sh ~/.config/i3/script/moveContainerAndScreenPre.sh
+# TODO
+bindsym $mod+Ctrl+Shift+Right exec sh ~/.config/i3/script/moveContainerAndScreenNext.sh
+bindsym $mod+Ctrl+Shift+Left exec sh ~/.config/i3/script/moveContainerAndScreenPre.sh
 
 # shutdown / restart / suspend...
-set $mode_system System (l) lock, (e) logout, (s) suspend, (h) hibernate, (r) reboot, (CTRL+s) shutdown
+set $mode_system System (l) lock, (e) logout, (r) reboot, (CTRL+s) shutdown
 
 # Lock Screen, etc
 mode "$mode_system" {
-    bindsym l exec --no-startup-id $i3lockwall, mode "default"
-    bindsym e exec --no-startup-id i3-msg exit, mode "default"
-    bindsym s exec --no-startup-id $i3lockwall && systemctl suspend, mode "default"
-    bindsym h exec --no-startup-id $i3lockwall && systemctl hibernate, mode "default"
-    bindsym r exec --no-startup-id systemctl reboot, mode "default"
-    bindsym Ctrl+s exec --no-startup-id systemctl poweroff -i, mode "default"
+    bindsym l exec swaylock, mode "default"
+    bindsym e exec sway exit, mode "default"
+    bindsym r exec systemctl reboot, mode "default"
+    bindsym Ctrl+s exec systemctl poweroff -i, mode "default"
 
     # back to normal: Enter or Escape
     bindsym Return mode "default"
@@ -276,3 +214,31 @@ mode "$mode_system" {
 
 bindsym $mod+BackSpace mode "$mode_system"
 
+bar {
+	position bottom
+	mode hide
+	hidden_state hide
+        status_command i3status --config ~/.config/i3/i3status.conf
+	font pango:DejaVu Sans Mono 11
+	strip_workspace_numbers yes 
+	strip_workspace_name yes 
+}
+
+
+# Touch pad
+input type:touchpad  {
+       dwt enabled
+       tap enabled
+       natural_scroll enabled
+       middle_emulation enabled
+}
+
+# Keyboard
+input * xkb_layout "gb"
+
+# LOCK Screen 
+
+exec swayidle -w \
+	timeout 300 'swaylock -f' \
+	timeout 310 'swaymsg "output * power off"' \
+	resume 'swaymsg "output * power on"'
