--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -1,5 +1,7 @@
-include ./mocha.conf
-font_family      jetbrains mono nerd font
+# include ./mocha.conf
+include ./kitty-themes/themes/gruvbox_light.conf
+# font_family      jetbrains mono nerd font
+font_family      Hack
 font_size        16
 bold_font        auto
 italic_font      auto
