--- a/config/sway/config
+++ b/config/sway/config
@@ -218,7 +218,8 @@ bar {
 	position bottom
 	mode hide
 	hidden_state hide
-        status_command i3status --config ~/.config/i3/i3status.conf
+	modifier $mod
+    status_command i3status --config ~/.config/i3/i3status.conf
 	font pango:DejaVu Sans Mono 11
 	strip_workspace_numbers yes 
 	strip_workspace_name yes 
@@ -242,3 +243,5 @@ exec swayidle -w \
 	timeout 300 'swaylock -f' \
 	timeout 310 'swaymsg "output * power off"' \
 	resume 'swaymsg "output * power on"'
+
+# output eDP-1 scale 1.2
