--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -1,215 +1,236 @@
-# Setup monitors
+################
+### MONITORS ###
+################
+
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=,preferred,auto,1
+monitor=,preferred,auto,1.25
 
-# Dual monitor example on G15 Strix
-# eDP-1 is the built in monitor while DP-1 is external
-# Both monitors here are at 1440 and 165Hz
-# DP-1 is on the left and  eDP-1 is on the right
-#monitor=DP-1,2560x1440@165,0x0,1
-#monitor=eDP-1,2560x1440@165,2560x0,1
-
-# See https://wiki.hyprland.org/Configuring/Keywords/ for more
-
-# Execute your favorite apps at launch
-exec-once = ~/.config/hypr/xdg-portal-hyprland
-exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
-exec-once = swww init
-exec = waybar
-exec-once = mako
-exec-once = blueman-applet
-exec-once = nm-applet --indicator
-exec-once = wl-paste --watch cliphist store
-#lock screen
-exec-once = swayidle -w timeout 600 hyprlock
-exec = ~/.config/HyprV/hyprv_util setbg
-# exec-once fcitx5
-exec-once=fcitx5-remote -r
-exec-once=fcitx5 -d --replace
-
-
-
-# For all categories, see https://wiki.hyprland.org/Configuring/Variables/
-input {
-    kb_layout = gb, cn
-    kb_variant =
-    kb_model =
-    kb_options = grp:win_space_toggle
-    kb_rules =
-
-    follow_mouse = 1
-
-    touchpad {
-        natural_scroll = yes
-	scroll_factor = 0.8
-    }
-
-    sensitivity = 0.5 # -1.0 - 1.0, 0 means no modification.
+xwayland {
+  force_zero_scaling = true
 }
 
-general {
-    # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
+###################
+### MY PROGRAMS ###
+###################
+
+# See https://wiki.hyprland.org/Configuring/Keywords/
+
+# Set programs that you use
+$terminal = kitty
+$fileManager = dolphin
+$menu = wofi --show drun
+
+
+#################
+### AUTOSTART ###
+#################
+
+# Autostart necessary processes (like notifications daemons, status bars, etc.)
+# Or execute your favorite apps at launch like this:
+
+# exec-once = $terminal
+# exec-once = nm-applet &
+# exec-once = waybar & hyprpaper & firefox
+exec-once = swayidle -w timeout 600 hyprlock
+exec-once = gammastep
+
+
+#############################
+### ENVIRONMENT VARIABLES ###
+#############################
+
+# See https://wiki.hyprland.org/Configuring/Environment-variables/
+
+# env = XCURSOR_SIZE, 48
+# env = HYPRCURSOR_SIZE, 48
+#
+
+# yay -S rose-pine-hyprcursor
+env = HYPRCURSOR_THEME,rose-pine-hyprcursor
+env = HYPRCURSOR_SIZE,28
+
+
+#####################
+### LOOK AND FEEL ###
+#####################
+
+# Refer to https://wiki.hyprland.org/Configuring/Variables/
+
+# https://wiki.hyprland.org/Configuring/Variables/#general
+general {
     gaps_in = 5
-    gaps_out = 10
+    gaps_out = 8
+
     border_size = 2
-    #col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
-    col.active_border=rgb(cdd6f4)
+
+    # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
+    col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
     col.inactive_border = rgba(595959aa)
+
+    # Set to true enable resizing windows by clicking and dragging on borders and gaps
+    resize_on_border = false
+
+    # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
+    allow_tearing = false
 
     layout = dwindle
 }
 
-misc {
-    disable_hyprland_logo = yes
-}
-
+# https://wiki.hyprland.org/Configuring/Variables/#decoration
 decoration {
-    # See https://wiki.hyprland.org/Configuring/Variables/ for more
+    rounding = 10
+    rounding_power = 2
 
-    rounding = 5
-    
-    blur {
+    # Change transparency of focused and unfocused windows
+    active_opacity = 1.0
+    inactive_opacity = 1.0
+
+    shadow {
         enabled = true
-        size = 7
-        passes = 4
-        new_optimizations = true
+        range = 4
+        render_power = 3
+        color = rgba(1a1a1aee)
     }
 
-    blurls = lockscreen
+    # https://wiki.hyprland.org/Configuring/Variables/#blur
+    blur {
+        enabled = true
+        size = 3
+        passes = 1
 
-    drop_shadow = yes
-    shadow_range = 4
-    shadow_render_power = 3
-    col.shadow = rgba(1a1a1aee)
+        vibrancy = 0.1696
+    }
 }
 
+# https://wiki.hyprland.org/Configuring/Variables/#animations
 animations {
-    enabled = yes
+    enabled = yes, please :)
 
-    # Some default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
-    bezier = myBezier, 0.10, 0.9, 0.1, 1.05
+    # Default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
 
-    animation = windows, 1, 7, myBezier, slide
-    animation = windowsOut, 1, 7, myBezier, slide
-    animation = border, 1, 10, default
-    animation = fade, 1, 7, default
-    animation = workspaces, 1, 6, default
+    bezier = easeOutQuint,0.23,1,0.32,1
+    bezier = easeInOutCubic,0.65,0.05,0.36,1
+    bezier = linear,0,0,1,1
+    bezier = almostLinear,0.5,0.5,0.75,1.0
+    bezier = quick,0.15,0,0.1,1
+
+    animation = global, 1, 17, default
+    animation = border, 1, 5.39, easeOutQuint
+    animation = windows, 1, 4.79, easeOutQuint
+    animation = windowsIn, 1, 4.1, easeOutQuint, popin 87%
+    animation = windowsOut, 1, 1.49, linear, popin 87%
+    animation = fadeIn, 1, 1.73, almostLinear
+    animation = fadeOut, 1, 1.46, almostLinear
+    animation = fade, 1, 3.03, quick
+    animation = layers, 1, 3.81, easeOutQuint
+    animation = layersIn, 1, 4, easeOutQuint, fade
+    animation = layersOut, 1, 1.5, linear, fade
+    animation = fadeLayersIn, 1, 1.79, almostLinear
+    animation = fadeLayersOut, 1, 1.39, almostLinear
+    animation = workspaces, 1, 1.94, almostLinear, fade
+    animation = workspacesIn, 1, 1.21, almostLinear, fade
+    animation = workspacesOut, 1, 1.94, almostLinear, fade
 }
 
+# Ref https://wiki.hyprland.org/Configuring/Workspace-Rules/
+# "Smart gaps" / "No gaps when only"
+# uncomment all if you wish to use that.
+# workspace = w[tv1], gapsout:0, gapsin:0
+# workspace = f[1], gapsout:0, gapsin:0
+# windowrulev2 = bordersize 0, floating:0, onworkspace:w[tv1]
+# windowrulev2 = rounding 0, floating:0, onworkspace:w[tv1]
+# windowrulev2 = bordersize 0, floating:0, onworkspace:f[1]
+# windowrulev2 = rounding 0, floating:0, onworkspace:f[1]
+
+# See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
 dwindle {
-    # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
-    pseudotile = yes # master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
-    preserve_split = yes # you probably want this
-    special_scale_factor=0.95
+    pseudotile = true # Master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
+    preserve_split = true # You probably want this
+	special_scale_factor = 0.95
 }
 
+# See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
 master {
-    # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
-    # new_is_master = true
-    orientation = "right"
+    new_status = master
 }
 
+# https://wiki.hyprland.org/Configuring/Variables/#misc
+misc {
+    force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
+    disable_hyprland_logo = false # If true disables the random hyprland logo / anime girl background. :(
+}
+
+
+#############
+### INPUT ###
+#############
+
+# https://wiki.hyprland.org/Configuring/Variables/#input
+input {
+    kb_layout = us
+    kb_variant =
+    kb_model =
+    kb_options =
+    kb_rules =
+
+    follow_mouse = 1
+
+    sensitivity = 0.0 # -1.0 - 1.0, 0 means no modification.
+	scroll_factor = 1.5
+
+    touchpad {
+        natural_scroll = true
+    }
+}
+
+# https://wiki.hyprland.org/Configuring/Variables/#gestures
 gestures {
-    # See https://wiki.hyprland.org/Configuring/Variables/ for more
-    workspace_swipe = off
+    workspace_swipe = false
 }
 
 # Example per-device config
-# See https://wiki.hyprland.org/Configuring/Keywords/#executing for more
-#device:epic mouse V1 {
-#    sensitivity = -1
-#}
-
-# Example windowrule v1
-#windowrule = float, ^(kitty)$
-windowrule = float,^(pavucontrol)$
-windowrule = float,^(blueman-manager)$
-windowrule = float,^(nm-connection-editor)$
-windowrule = float,^(chromium)$
-windowrule = float,^(thunar)$
-windowrule = float, title:^(btop)$
-windowrule = float, title:^(update-sys)$
-
-# Example windowrule v2
-# windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
-# See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
-# rules below would make the specific app transparent
-windowrulev2 = opacity 0.95 0.95,class:^(kitty)$
-windowrulev2 = animation popin,class:^(kitty)$,title:^(update-sys)$
-windowrulev2 = animation popin,class:^(thunar)$
-windowrulev2 = opacity 0.8 0.8,class:^(thunar)$
-windowrulev2 = opacity 0.9 0.9,class:^(VSCodium)$
-windowrulev2 = animation popin,class:^(chromium)$
-windowrulev2 = move cursor -3% -105%,class:^(wofi)$
-windowrulev2 = noanim,class:^(wofi)$
-windowrulev2 = opacity 0.8 0.6,class:^(wofi)$
+# See https://wiki.hyprland.org/Configuring/Keywords/#per-device-input-configs for more
+device {
+    name = epic-mouse-v1
+    sensitivity = -0.5
+}
 
 
-# See https://wiki.hyprland.org/Configuring/Keywords/ for more
-$mainMod = SUPER
+###################
+### KEYBINDINGS ###
+###################
+
+# See https://wiki.hyprland.org/Configuring/Keywords/
+$mainMod = SUPER # Sets "Windows" key as main modifier
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, return, exec, kitty  #open the terminal
+bind = $mainMod, M, exit,
+bind = $mainMod, E, exec, $fileManager
+bind = $mainMod, V, togglefloating,
+bind = $mainMod, P, pseudo, # dwindle
+bind = $mainMod, J, togglesplit, # dwindle
+bind = $mainMod, return, exec, $terminal 
 bind = $mainMod, q, killactive, # close the active window
 bind = $mainMod, L, exec, swaylock # Lock the screen
 bind = $mainMod, M, exec, wlogout --protocol layer-shell # show the logout window
 bind = $mainMod SHIFT, M, exit, # Exit Hyprland all together no (force quit Hyprland)
-bind = $mainMod, E, exec, thunar # Show the graphical file browser
-bind = $mainMod, V, togglefloating, # Allow a window to float
-bind = $mainMod, d, exec, wofi # Show the graphical app launcher
-bind = $mainMod, P, pseudo, # dwindle
-bind = $mainMod, J, togglesplit, # dwindle
+bind = $mainMod, d, exec, $menu 
+bind = $mainMod,F,fullscreen
+
+
 #bind = $mainMod, S, exec, grim -g "$(slurp)" - | swappy -f - # take a screenshot
-bind = ALT, V, exec, cliphist list | wofi -dmenu | cliphist decode | wl-copy # open clipboard manager
-bind = $mainMod, T, exec, ~/.config/HyprV/hyprv_util vswitch # switch HyprV version
-bind=SUPER,F,fullscreen
+# open clipboard manager
+bind = ALT, V, exec, cliphist list | wofi -dmenu | cliphist decode | wl-copy 
 
-# Screenshot
-bind =, Print, exec, grim -g "$(slurp)" - | wl-copy && wl-paste > ~/Pictures/Screenshot-cropped-$(date +%F_%T).png | notify-send "Cropped Screenshot saved to ~/Pictures" -t 1000 # screenshot of a region
-bind = $mainMod, Print, exec, grim - | wl-copy && wl-paste > ~/Pictures/Screenshot-$(date +%F_%T).png | notify-send "Screenshot saved to ~/Pictures" -t 1000
-
-# Exit hyprland
-bind=$mainMod SHIFT,e,submap,resize
-# will start a submap called "resize"
-submap=resize
-# sets repeatable binds for resizing the active window
-binde=,y,exec, hyprctl dispatch exit
-# use reset to go back to the global submap
-bind=,escape,submap,reset 
-submap=reset
-
-# Resize
-bind=$mainMod SHIFT,r,submap,resize
-# will start a submap called "resize"
-submap=resize
-# sets repeatable binds for resizing the active window
-binde=,right,resizeactive,10 0
-binde=,left,resizeactive,-10 0
-binde=,up,resizeactive,0 -10
-binde=,down,resizeactive,0 10
-# use reset to go back to the global submap
-bind=,escape,submap,reset 
-# will reset the submap, meaning end the current one and return to the global one
-submap=reset
-# keybinds further down will be global again...
-
+# toggle waybar
+bind = $mainMod SHIFT, B, exec, sh $HOME/.config/hypr/toggle_waybar.sh 
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
 bind = $mainMod, right, movefocus, r
 bind = $mainMod, up, movefocus, u
 bind = $mainMod, down, movefocus, d
-
-bind = SUPER SHIFT, left, movewindow, l
-bind = SUPER SHIFT, right, movewindow, r
-bind = SUPER SHIFT, up, movewindow, u
-bind = SUPER SHIFT, down, movewindow, d
-
-bind=$mainMod SHIFT,MINUS,movetoworkspace,special
-bind=$mainMod,MINUS,togglespecialworkspace,
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
@@ -223,6 +244,17 @@ bind = $mainMod, 8, workspace, 8
 bind = $mainMod, 9, workspace, 9
 bind = $mainMod, 0, workspace, 10
 
+# move windows
+bind = SUPER SHIFT, left, movewindow, l
+bind = SUPER SHIFT, right, movewindow, r
+bind = SUPER SHIFT, up, movewindow, u
+bind = SUPER SHIFT, down, movewindow, d
+# Scroll through existing workspaces with mainMod + scroll
+bind = $mainMod CONTROL, right, workspace, e+1
+bind = $mainMod CONTROL, left, workspace, e-1
+bind = $mainMod CONTROL SHIFT, left, movetoworkspace, e-1
+bind = $mainMod CONTROL SHIFT, right, movetoworkspace, e+1
+
 # Move active window to a workspace with mainMod + SHIFT + [0-9]
 bind = $mainMod SHIFT, 1, movetoworkspace, 1
 bind = $mainMod SHIFT, 2, movetoworkspace, 2
@@ -235,19 +267,56 @@ bind = $mainMod SHIFT, 8, movetoworkspace, 8
 bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
-# Scroll through existing workspaces with mainMod + scroll
-bind = $mainMod CONTROL, right, workspace, e+1
-bind = $mainMod CONTROL, left, workspace, e-1
-bind = $mainMod CONTROL SHIFT, left, movetoworkspace, e-1
-bind = $mainMod CONTROL SHIFT, right, movetoworkspace, e+1
+# Example special workspace (scratchpad)
+bind=$mainMod SHIFT,MINUS,movetoworkspace,special
+bind=$mainMod,MINUS,togglespecialworkspace,
 
+# Scroll through existing workspaces with mainMod + scroll
+bind = $mainMod, mouse_down, workspace, e+1
+bind = $mainMod, mouse_up, workspace, e-1
 
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
-# Source a file (multi-file configs)
-# source = ~/.config/hypr/myColors.conf
-source = ~/.config/hypr/media-binds.conf
-source = ~/.config/hypr/env_var.conf
-source = ~/.config/hypr/env_var_nvidia.conf
+bind = $mainMod, R,submap,resize
+submap=resize
+bind = , right, resizeactive, 30 0
+bind = , left, resizeactive, -30 0
+bind = , up, resizeactive, 0 -30
+bind = , down, resizeactive, 0 30
+bind = , escape,submap,reset
+submap=reset
+
+# Laptop multimedia keys for volume and LCD brightness
+bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
+bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
+bindel = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
+bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
+bindel = ,XF86MonBrightnessUp, exec, brightnessctl s 10%+
+bindel = ,XF86MonBrightnessDown, exec, brightnessctl s 10%-
+
+# Requires playerctl
+bindl = , XF86AudioNext, exec, playerctl next
+bindl = , XF86AudioPause, exec, playerctl play-pause
+bindl = , XF86AudioPlay, exec, playerctl play-pause
+bindl = , XF86AudioPrev, exec, playerctl previous
+
+##############################
+### WINDOWS AND WORKSPACES ###
+##############################
+
+# See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
+# See https://wiki.hyprland.org/Configuring/Workspace-Rules/ for workspace rules
+
+# Example windowrule v1
+# windowrule = float, ^(kitty)$
+
+# Example windowrule v2
+# windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
+
+# Ignore maximize requests from apps. You'll probably like this.
+windowrulev2 = suppressevent maximize, class:.*
+
+# Fix some dragging issues with XWayland
+windowrulev2 = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
